refactore(config): preparing for production deployment